@@ -20,3 +20,4 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 commitHelper;  ) > 0.10.2cvs14.patchset
 ( cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/gtkhtml2_viewer.c;  ) > 0.10.2cvs15.patchset
 ( cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/gtkhtml2_viewer.c;  ) > 0.10.2cvs16.patchset
+( cvs diff -u -r 1.1.2.23 -r 1.1.2.24 src/gtkhtml2_viewer.c;  ) > 0.10.2cvs17.patchset
