@@ -1,3 +1,8 @@
+2006-09-09 [colin]	0.10.2cvs17
+
+	* src/gtkhtml2_viewer.c
+		Implement zooming via Control+mouse wheel 
+
 2006-09-09 [colin]	0.10.2cvs16
 
 	* src/gtkhtml2_viewer.c
